 ! (Permissions) Fast Food Service permission node renamed to mcmmo.ability.taming.fastfoodservice
 ! (Permissions) Counter Attack permission node renamed to mcmmo.ability.swords.counterattack
 ! (Permissions) Arrow Deflect permission node renamed to mcmmo.ability.unarmed.arrowdeflect
 ! (Permissions) Iron Arm Style permission node renamed to mcmmo.ability.unarmed.ironarmstyle
 ! (Locale) The descriptions of a few skills have changed
 ! (Locale) Removed redundant information from some skill names and descriptions en_US (other locales will need to be updated)
 ! (Locale) SubSkill locale keys are now located at {ParentSkill}.SubSkill.SubSkillName
 ! (Locale) Super Abilities no longer have (ABILITY) in their Skill.Effect strings
 ! (API) mcMMO is now built against Spigot-API instead of Bukkit
 ! (API) Moved a lot of methods from SkillCommand to SkillUtils
 ! (API) SkillType is now PrimarySkillType
 ! (API) SecondarySkill is now SubSkillType
 ! (API) AbilityType is now SuperAbilityType
 ! (API) SecondaryAbilityEvent is now SubSkillEvent
 ! (API) SubSkillType has had many helpful methods added to it
 ! (API) GREEN_THUMB_PLANT & GREEN_THUMB_BLOCK are replaced by GREEN_THUMB
 ! (Code) Refactored some unreadable code relating to SecondaryAbilityType activation in SkillUtils

Version 2.0.0
 = Fixed an interaction between Tree Feller and Stripped Wood
 ! Fireworks no longer fire by default for ability activation/deactivation
 ! Website has been changed and the MOTD string relating to it reflects this
 ! Discord link added to mcMMO command
 ! Updated misc strings relating to mcMMO


Version 1.5.05-SNAPSHOT

Version 1.5.04
 + Added option to config.yml to control mcMMO generated sound volume
 + Added option to config.yml to truncate existing player skill levels that exceed the skill level cap
 + Falling blocks persist mcMMO natural data
 = Woodcutting double drops correctly identify acacia and dark oak logs
 = Skill Reset command now correctly identifies arguments